Replace old Guava code with Java 8 equivalents